--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,4 +22,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{  }}
+          GITHUB_TOKEN: ${{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 }}
